; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tracer.c_tracer.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tracer.c_tracer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@n_basic_blocks = common dso_local global i64 0, align 8
@NUM_FIXED_BLOCKS = common dso_local global i64 0, align 8
@dump_file = common dso_local global i64 0, align 8
@dump_flags = common dso_local global i32 0, align 4
@CLEANUP_EXPENSIVE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tracer(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @n_basic_blocks, align 8
  %4 = load i64, i64* @NUM_FIXED_BLOCKS, align 8
  %5 = add nsw i64 %4, 1
  %6 = icmp sle i64 %3, %5
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %31

8:                                                ; preds = %1
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @cfg_layout_initialize(i32 %9)
  %11 = call i32 (...) @mark_dfs_back_edges()
  %12 = load i64, i64* @dump_file, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %8
  %15 = load i64, i64* @dump_file, align 8
  %16 = load i32, i32* @dump_flags, align 4
  %17 = call i32 @dump_flow_info(i64 %15, i32 %16)
  br label %18

18:                                               ; preds = %14, %8
  %19 = call i32 (...) @tail_duplicate()
  %20 = call i32 (...) @layout_superblocks()
  %21 = load i64, i64* @dump_file, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %18
  %24 = load i64, i64* @dump_file, align 8
  %25 = load i32, i32* @dump_flags, align 4
  %26 = call i32 @dump_flow_info(i64 %24, i32 %25)
  br label %27

27:                                               ; preds = %23, %18
  %28 = call i32 (...) @cfg_layout_finalize()
  %29 = load i32, i32* @CLEANUP_EXPENSIVE, align 4
  %30 = call i32 @cleanup_cfg(i32 %29)
  br label %31

31:                                               ; preds = %27, %7
  ret void
}

declare dso_local i32 @cfg_layout_initialize(i32) #1

declare dso_local i32 @mark_dfs_back_edges(...) #1

declare dso_local i32 @dump_flow_info(i64, i32) #1

declare dso_local i32 @tail_duplicate(...) #1

declare dso_local i32 @layout_superblocks(...) #1

declare dso_local i32 @cfg_layout_finalize(...) #1

declare dso_local i32 @cleanup_cfg(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
